<resources>
    <string name="app_name">MVPDemo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="welcome">Welcome to my application</string>

    <string name="showError">Wrong username or password</string>
    <string name="showErrorWhenNotEntry">You must entry all text fields</string>
    <string name="showErrorWhenReentryPasswordWrong">Password and re-entry password must same</string>
    <string name="showSigninSuccesful">Sign In succesful</string>
    <string name="showWhenUsernameExists">Username is already exists</string>
</resources>
