<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edt_signin_username"
        style="@style/otherEditText"
        android:layout_marginTop="@dimen/dp_82"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_signin_password"
        style="@style/otherEditText"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@id/edt_signin_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_reentry_password"
        style="@style/otherEditText"
        android:hint="@string/password"
        android:layout_below="@id/edt_signin_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_email"
        style="@style/otherEditText"
        android:hint="@string/email"
        android:inputType="textEmailSubject"
        android:layout_below="@id/edt_reentry_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_signin"
        android:text="@string/signin"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_below="@id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
