<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edt_login_username"
        style="@style/otherEditText"
        android:layout_marginTop="@dimen/dp_82"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edt_login_password"
        style="@style/otherEditText"
        android:layout_below="@id/edt_login_username"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_login"
        android:text="@string/login"
        android:layout_below="@id/edt_login_password"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
